--- a/src/components/NameCards.css
+++ b/src/components/NameCards.css
@@ -2,17 +2,29 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
 .card {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 200px;
   height: 150px;
   border-radius: 20px;
-  border: 2px solid #ec380b;
+  border: 4px solid #f05f3b;
   background-color: #a5c5c3;
   margin: 20px;
   padding: 20px;
 }
+
+.cards-greeting {
+    font-family: "Montserrat", sans-serif;
+}
+
+.cards-name {
+    font-family: "Lato", sans-serif;
+}
+
